complete with All requirement

--- a/index.html
+++ b/index.html
@@ -1,12 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font Awsome kit -->
+    <script src="https://kit.fontawesome.com/9e21fed26e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/style.css">
+    <!-- Media Query style -->
+    <link rel="stylesheet" href="styles/media-query.css">
     <title>FIFA 2022</title>
 </head>
+
 <body>
-    
+    <!-- Header hero area -->
+    <header class="hero">
+        <section class="hero-container">
+            <div class="hero-left">
+                <h1>The Greatest show on the earth</h1>
+                <!-- paragraph title for mobile view elipipses -->
+                <p title="It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
+                old.">Contrary to popular belief, funny item is not simply
+                    random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
+                    old.
+                </p>
+                <a href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+            </div>
+            <div class="hero-right">
+                <img src="images/Banner-Image.png" alt="">
+            </div>
+        </section>
+    </header>
+    <!-- Main Area -->
+    <main class="main-area">
+        <section class="main-container">
+            <aside>
+                <div class="main-left">
+                    <a href="upcoming.html" class="btn">Upcoming Match</a>
+                    <a href="" class="btn">All Group</a>
+                    <a href="" class="btn active">Blog</a>
+                </div>
+            </aside>
+            <div class="blog-container">
+                <div class="main-right">
+                    <div class="blogs">
+                        <img src="images/Blog-Image.png" alt="">
+                        <div class="blog-text">
+                            <button type="submit">Transfer</button>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="blog-icon">
+                                <span><i class="fa-regular fa-clock"></i> 10hr</span>
+                                <span><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blogs">
+                        <img src="images/Blog-Image.png" alt="">
+                        <div class="blog-text">
+                            <button type="submit">Transfer</button>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="blog-icon">
+                                <span><i class="fa-regular fa-clock"></i> 10hr</span>
+                                <span><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blogs">
+                        <img src="images/Blog-Image.png" alt="">
+                        <div class="blog-text">
+                            <button type="submit">Transfer</button>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="blog-icon">
+                                <span><i class="fa-regular fa-clock"></i> 10hr</span>
+                                <span><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blogs">
+                        <img src="images/Blog-Image.png" alt="">
+                        <div class="blog-text">
+                            <button type="submit">Transfer</button>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="blog-icon">
+                                <span><i class="fa-regular fa-clock"></i> 10hr</span>
+                                <span><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blogs">
+                        <img src="images/Blog-Image.png" alt="">
+                        <div class="blog-text">
+                            <button type="submit">Transfer</button>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="blog-icon">
+                                <span><i class="fa-regular fa-clock"></i> 10hr</span>
+                                <span><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blogs">
+                        <img src="images/Blog-Image.png" alt="">
+                        <div class="blog-text">
+                            <button type="submit">Transfer</button>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="blog-icon">
+                                <span><i class="fa-regular fa-clock"></i> 10hr</span>
+                                <span><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blogs">
+                        <img src="images/Blog-Image.png" alt="">
+                        <div class="blog-text">
+                            <button type="submit">Transfer</button>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="blog-icon">
+                                <span><i class="fa-regular fa-clock"></i> 10hr</span>
+                                <span><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blogs">
+                        <img src="images/Blog-Image.png" alt="">
+                        <div class="blog-text">
+                            <button type="submit">Transfer</button>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="blog-icon">
+                                <span><i class="fa-regular fa-clock"></i> 10hr</span>
+                                <span><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blogs">
+                        <img src="images/Blog-Image.png" alt="">
+                        <div class="blog-text">
+                            <button type="submit">Transfer</button>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="blog-icon">
+                                <span><i class="fa-regular fa-clock"></i> 10hr</span>
+                                <span><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <section class="tab-tab">
+        <div class="tab-button">
+            <a href="#"> View All</a>
+        </div>
+    </section>
+    <!-- Footer Area -->
+    <footer>
+        <div class="footer-area">
+            <h2>Goal</h2>
+            <hr>
+            <div class="footer-contact">
+                <a href="#">Contact Us</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy </a> 
+                <a href="#">Privacy Settings</a>
+                <a href="#">Goal App</a>
+                <a href="#">Goal Live</a>
+            </div>
+            <div class="social-media ">
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
+                <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+                <a href="https://www.reddit.com/" target="_blank"><i class="fa-brands fa-reddit-square"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
